--- a/cloudmart-backend/package.json
+++ b/cloudmart-backend/package.json
@@ -6,7 +6,8 @@
   "main": "./src/server.js",
   "scripts": {
     "start": "node ./src/server.js",
-    "dev": "nodemon ./src/server.js"
+    "dev": "nodemon ./src/server.js",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "jest": "^29.7.0"
   }
 }
