--- a/cloudmart-backend/package.json
+++ b/cloudmart-backend/package.json
@@ -18,9 +18,14 @@
     "@aws-sdk/eventstream-marshaller": "^3.120.0",
     "@aws-sdk/util-utf8-node": "^3.259.0",
     "aws-sdk": "^2.1691.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "openai": "^4.58.2",
     "uuid": "^10.0.0"
   },
