--- a/cloudmart-frontend/package.json
+++ b/cloudmart-frontend/package.json
@@ -11,13 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "js-cookie": "^3.0.5",
     "lucide-react": "^0.439.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.48.2",
-    "react-router-dom": "^6.26.2",
-    "react-toastify": "^9.1.3"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
