--- a/cloudmart-backend/package.json
+++ b/cloudmart-backend/package.json
@@ -27,7 +27,8 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "openai": "^4.58.2",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "nodemailer": "^6.9.11"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
