--- a/cloudmart-backend/package.json
+++ b/cloudmart-backend/package.json
@@ -28,7 +28,8 @@
     "jsonwebtoken": "^9.0.2",
     "openai": "^4.58.2",
     "uuid": "^10.0.0",
-    "nodemailer": "^6.9.11"
+    "nodemailer": "^6.9.11",
+    "axios": "^1.7.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
